--- a/ks_experiment.ipynb
+++ b/ks_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
     "# Defining env\n",
     "N = 64\n",
     "actuator_locs = ((2 * np.pi) / 8) * np.arange(8)\n",
-    "sensor_locs = ((2 * np.pi) / 8) * np.arange(8)\n",
-    "nu = 0.08\n",
+    "sensor_locs = ((2 * np.pi) / 20) * np.arange(20)\n",
+    "nu = 0.02\n",
     "env = KSenv(nu=nu,\n",
     "            actuator_locs=actuator_locs,\n",
     "            sensor_locs=sensor_locs,\n",
@@ -28,11 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m action \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(env\u001b[38;5;241m.\u001b[39maction_size) \u001b[38;5;66;03m# no actuation\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# action = np.sin(np.ones(env.action_size)*env.dt*i) # sinusoidal activation\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m action_arr \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction_arr\u001b[49m\u001b[43m,\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# save actions\u001b[39;00m\n\u001b[0;32m     16\u001b[0m observation, reward, terminated, truncated, _ \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(action)\n\u001b[0;32m     17\u001b[0m observation_arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mvstack((observation_arr,observation)) \u001b[38;5;66;03m# save observations\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\egeoz\\Imperial\\DA-RL\\.venv\\Lib\\site-packages\\numpy\\_core\\shape_base.py:287\u001b[0m, in \u001b[0;36mvstack\u001b[1;34m(tup, dtype, casting)\u001b[0m\n\u001b[0;32m    285\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(arrs, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    286\u001b[0m     arrs \u001b[38;5;241m=\u001b[39m (arrs,)\n\u001b[1;32m--> 287\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_nx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcasting\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcasting\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "N_t = 10000\n",
+    "N_t = 1000\n",
     "\n",
     "observation_init = env.reset()\n",
     "observation_arr,_  = observation_init\n",
@@ -59,7 +72,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.125)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(1/64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.22360679774997896)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(1/20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1116,6 +1169,92 @@
     "# )\n",
     "\n",
     "# config.enKF.wait_steps = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sac import SAC\n",
+    "from envs.KS_environment_jax import KSenv\n",
+    "import ml_collections\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "config = ml_collections.ConfigDict()\n",
+    "config.env = ml_collections.ConfigDict()\n",
+    "config.env.N = 64\n",
+    "config.env.nu = 0.08\n",
+    "config.env.actuator_scale = 0.1\n",
+    "config.env.actuator_loss_weight = 1.0\n",
+    "config.env.burn_in = 1000\n",
+    "config.env.actuator_locs = ((2 * jnp.pi) / 8) * jnp.arange(8)\n",
+    "config.env.sensor_locs = ((2 * jnp.pi) / 8) * jnp.arange(8)\n",
+    "config.env.target = \"e0\"\n",
+    "config.env.frame_skip = 1\n",
+    "\n",
+    "config.network = ml_collections.ConfigDict()\n",
+    "config.network.actor_hidden_units = [256, 256]\n",
+    "config.network.critic_hidden_units = [256, 256]\n",
+    "config.network.n_critics = 2\n",
+    "config.network.activation_function = \"relu\"\n",
+    "\n",
+    "config.train = ml_collections.ConfigDict()\n",
+    "config.train.actor_learning_rate = 3e-4\n",
+    "config.train.critic_learning_rate = 3e-4\n",
+    "config.train.discount_factor = 0.99  # denoted by gamma\n",
+    "config.train.soft_update_rate = 0.005  # denoted by tau\n",
+    "config.train.batch_size = 256\n",
+    "config.train.exploration_stddev = 0.1  # to be scaled by the environment\n",
+    "\n",
+    "config.seed = 1\n",
+    "env = KSenv(**config.env)\n",
+    "agent = SAC(config, env)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Critic(\n",
+       "     # attributes\n",
+       "     n_hidden_units = [256, 256]\n",
+       "     activation = relu\n",
+       " ),\n",
+       " Critic(\n",
+       "     # attributes\n",
+       "     n_hidden_units = [256, 256]\n",
+       "     activation = relu\n",
+       " )]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent.critic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key = jax.random.PRNGKey(config.seed)\n",
+    "key, key_network, key_buffer, key_env, key_obs, key_action = jax.random.split(key, 6)\n",
+    "\n",
+    "state_0 = jnp.array([jnp.zeros(env.ks_solver.N)])\n",
+    "action_0 = jnp.array([jnp.zeros(env.action_size)])\n",
+    "actor_state, critic_state = agent.initial_network_state(key_network, state_0, action_0)"
    ]
   },
   {
